# head_click

./: .env.example  .gitignore  AGENTS-emmiter.example.md  AGENTS.md  CMakeLists.txt  LICENSE  README.md  hardware.md  sdkconfig.defaults
components/app/: CMakeLists.txt  app_controller.c
components/app/include/app/: app_controller.h
components/core/: CMakeLists.txt  event_bus.c
components/core/include/core/: event_bus.h
components/hid/: CMakeLists.txt  hid_service.c
components/hid/include/hid/: hid_service.h
components/input/: CMakeLists.txt  input_mapper.c
components/input/include/input/: input_event.h  input_mapper.h  input_protocol.h
components/status_led/: CMakeLists.txt  status_led.c
components/status_led/include/status_led/: status_led.h
components/system_config/: CMakeLists.txt  system_config.c
components/system_config/include/system_config/: system_config.h
components/thermal_guard/: CMakeLists.txt  thermal_guard.c
components/thermal_guard/include/thermal_guard/: thermal_guard.h
components/transport_espnow/: CMakeLists.txt  espnow_receiver.c
components/transport_espnow/include/transport_espnow/: espnow_app_protocol.h  espnow_receiver.h
docs/: CONTRIBUTING.md  architecture.md
main/: CMakeLists.txt  app_main.c  head_click.c
tools/: generate_private_config.py
